jquery image uploader added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,6 @@ en:
   site_name: "svezacipele"
   home: "Početna"
   products: "Proizvodi"
+  quick_search: "Brza pretraga"
+  search: "Pretraga"
+  dismiss: "Ponisti"
