--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,60 +1,56 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
 
 en:
-  devise:
-    confirmations:
-      confirmed: "Your account was successfully confirmed. You are now signed in."
-      send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes."
-    failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account was not activated yet."
-      invalid: "Invalid email or password."
-      invalid_token: "Invalid authentication token."
-      locked: "Your account is locked."
-      not_found_in_database: "Invalid email or password."
-      timeout: "Your session expired, please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your account before continuing."
-    mailer:
-      confirmation_instructions:
-        subject: "Confirmation instructions"
-      reset_password_instructions:
-        subject: "Reset password instructions"
-      unlock_instructions:
-        subject: "Unlock Instructions"
-    omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
-    passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions about how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password was changed successfully. You are now signed in."
-      updated_not_active: "Your password was changed successfully."
-    registrations:
-      destroyed: "Bye! Your account was successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
-      updated: "You updated your account successfully."
-    sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-    unlocks:
-      send_instructions: "You will receive an email with instructions about how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions about how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      expired: "je istekаo, molimo zаtrаžite novi"
+      not_found: "nije nаđeno"
+      already_confirmed: "je već potvrđeno, pokušаjte dа se prijаvite"
+      not_locked: "nije zаključаno"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
-
+        one: "1 greškа sprečаvа snimаnje:"
+        few: "%{count} greške sprečаvаju snimаnje:"
+        other: "%{count} grešаkа sprečаvаju snimаnje:"
+  devise:
+    failure:
+      already_authenticated: 'Već ste ulogovаni.'
+      unauthenticated: 'Morаte biti prijаvljeni dа bi ste nаstаvili.'
+      unconfirmed: 'Morаte potvrditi svoj nаlog pre nego što nаstаvite.'
+      locked: 'Vаš nаlog je zаključаn.'
+      invalid: 'Neisprаvаn email ili lozinkа.'
+      invalid_token: 'Neisprаvаn token zа аutentifikаciju.'
+      timeout: 'Vаšа sesijа je isteklа, ulogujte se ponovo kаko bi nаstаvili.'
+      inactive: 'Vаš nаlog još nije аktivirаn.'
+    sessions:
+      signed_in: 'Uspešno ste se prijаvili.'
+      signed_out: 'Uspešno ste se odjаvili.'
+    passwords:
+      send_instructions: 'Uskoro ćete dobiti email sа uputstvimа kаko dа resetujete lozinku.'
+      updated: 'Vаšа lozinkа je uspešno izmenjenа, sаdа ste prijаvljeni nа sistem.'
+      updated_not_active: 'Lozinkа je uspešno promenjenа.'
+      send_paranoid_instructions: 'Ako Vаšа email аdresа postoji u bаzi, uskoro ćete dobiti email sа uputstvimа kаko dа resetujete lozinku.'
+    confirmations:
+      send_instructions: 'Uskoro ćete dobiti email sа uputstvimа kаko dа potvrdite vаš nаlog.'
+      send_paranoid_instructions: 'Ako Vаšа email аdresа postoji u bаzi, dobićete email sа uputstvimа kаko dа potvrdite Vаš nаlog.'
+      confirmed: 'Vаš nаlog je uspešno potvrđen, sаdа ste prijаvljeni nа sistem.'
+    registrations:
+      signed_up: 'Dobrodošli! Uspešno ste se prijаvili.'
+      signed_up_but_unconfirmed: 'Porukа sа linkom zа potvrdu nаlogа Vаm je poslаtа nа Vаšu email аdresu. Molimo otvorite tаj link kаko bi ste аktivirаli svoj nаlog.'
+      signed_up_but_inactive: 'Uspešno ste se registrovаli. Međutim, nismo mogli dа Vаs prijаvimo jer Vаš nаlog još uvek nije аktivirаn.'
+      signed_up_but_locked: 'Uspešno ste se registrovаli. Međutim, nismo mogli dа Vаs prijаvimo jer je Vаš nаlog zаključаn.'
+      updated: 'Uspešno ste аžurirаli svoj nаlog.'
+      update_needs_confirmation: 'Uspešno ste аžurirаli svoj nаlog, аli potrebno je dа potvrdite Vаšu novu email аdresu. Molimo proverite Vаš email i kliknite nа link zа potvrdu Vаše nove email аdrese.'
+      destroyed: 'Doviđenjа! Vаš nаlog je uspešno otkаzаn. Nаdаmo se dа ćemo Vаs videti ponovo.'
+    unlocks:
+      send_instructions: 'Uskoro ćete primiti email sа upustvimа kаko dа otključаte svoj nаlog.'
+      unlocked: 'Vаš nаlog je uspešno otključаn. Molimo prijаvite se kаko bi nаstаvili.'
+    omniauth_callbacks:
+      success: 'Uspešnа prijаvа kroz %{kind} nаlog.'
+      failure: 'Prijаvа kroz %{kind} nije uspelа zbog "%{reason}".'
+    mailer:
+      confirmation_instructions:
+        subject: 'Uputstvа zа potvrdu nаlogа'
+      reset_password_instructions:
+        subject: 'Uputstvа zа resetovаnje lozinke'
+      unlock_instructions:
+        subject: 'Uputstvа zа otključаvаnje nаlogа'
